# flet_algebra

./: ARCHITECTURE.md  README.md  pyproject.toml
src/: app.py  coordinate_system.py  create_main.py  graph_state.py  graphing_app.py  main.bk  main.bk2  main.py  main2.bk  models.py
